experiement_output/error_log/nondex-forest-code-spring_study_hyunsoo:spring-boot-journal-jdbc.log
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-jdbc/src/main/java/com/spring/boot/journal/SimpleJdbcAppApplication.java:27: error: cannot find symbol
		log.info("@@ 데이터 생성...");
		^
  symbol:   variable log
  location: class SimpleJdbcAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-jdbc/src/main/java/com/spring/boot/journal/SimpleJdbcAppApplication.java:30: error: cannot find symbol
		log.info("@@ findAll() 호출...");
		^
  symbol:   variable log
  location: class SimpleJdbcAppApplication
/mnt/batch/tasks/workitems/NONDEX_nondex_r131_1M31d16h48m2s/job-1/Task635/wd/NonDex-plugin-test/github.com/forest-code/spring_study_hyunsoo/spring-boot-journal-jdbc/src/main/java/com/spring/boot/journal/SimpleJdbcAppApplication.java:33: error: cannot find symbol
			log.info(journal.toString());
			^
  symbol:   variable log
  location: class SimpleJdbcAppApplication
3 errors

FAILURE: Build failed with an exception.

* What went wrong:
Execution failed for task ':spring-boot-journal-jdbc:compileJava'.
> Compilation failed; see the compiler error output for details.

* Try:
Run with --stacktrace option to get the stack trace. Run with --info or --debug option to get more log output. Run with --scan to get full insights.

* Get more help at https://help.gradle.org

BUILD FAILED in 1s
